crates/linkage-blaze-core/tests/ui_fail/dof_mismatch_param_lookup.stderr
error[E0308]: mismatched types
  --> tests/ui_fail/dof_mismatch_param_lookup.rs:5:40
   |
 5 |   const LINKAGE: LinkageFixed<3, 0, 8> = LinkageFixed::start()
   |  ________________---------------------___^
   | |                |
   | |                expected because of the type of the constant
 6 | |     .define_param("x", 0.5)
 7 | |     .define_param("y", 0.5)
...  |
10 | |     .param(2);  // error: parameter index must be defined
   | |_____________^ expected `LinkageFixed<3, 0, 8>`, found `Param`
   |
   = note: expected struct `LinkageFixed<3, 0, 8>`
              found struct `Param`
